bad/var_decl_init_invalid_conversion_string_null.example_compiler_output
ERROR
[1mbad/var_decl_init_invalid_conversion_string_null.lat:3:11: [1;31merror: [0;1mincompatible types: cannot assign variable of type `string` with an expression of type `null`[m
	string x = null;
	         [1;32m^[m
